@@ -11,6 +11,8 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
   * Support reading configuration variables from devscripts configuration
     files. (LP: #681693)
     - Added ubuntu-dev-tools.5
+    - Support this in many u-d-t scripts, and update manpages.
+    - Deprecate old configuration environment variables.
   * Support the combined "Name <email>" format in UBUMAIL, DEBFULLNAME, and
     DEBEMAIL. (LP: #665202)
   * Add the beginnings of a test suite. (LP: #690386)
@@ -22,7 +24,7 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
   * ubuntutools/lp/lpapicache.py: Allow easier selection of 'staging' as LP
     instance to use (lp: #693060).
 
- -- Michael Bienia <geser@ubuntu.com>  Tue, 21 Dec 2010 19:14:57 +0100
+ -- Stefano Rivera <stefanor@ubuntu.com>  Wed, 22 Dec 2010 00:06:29 +0200
 
 ubuntu-dev-tools (0.108) experimental; urgency=low
 
